[package]
name = "RScanner"
version = "1.0.8"
edition = "2025"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
colored = "2.0"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
