[package]
name = "RScanner"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
futures = "0.3"
colored = "2.0"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
