[package]
name = "Organizer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "Organizer"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"
